<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_mobile_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.catsprogrammer.catsfourthv.MobileMain">
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="4">

        <TextView
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:text="@string/roll" />

        <TextView
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:text="@string/pitch" />

        <TextView
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:text="@string/yaw" />


        <TextView
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:text="@string/fuseM" />

        <TextView
            android:id="@+id/fuseXm"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/fuseYm"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/fuseZm"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:text="@string/fuseW" />

        <TextView
            android:id="@+id/fuseXw"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/fuseYw"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/fuseZw"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:text="@string/differM" />

        <TextView
            android:id="@+id/differXm"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/differYm"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/differZm"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:text="@string/differW" />

        <TextView
            android:id="@+id/differXw"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/differYw"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/differZw"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content" />
    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start" />

        <Button
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/stop" />

        <Button
            android:id="@+id/record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </LinearLayout>
</LinearLayout>
